--- a/_downloads/59ec61044c62ea21e72b2a07e34c4636/plot_join_obs_seq.ipynb
+++ b/_downloads/59ec61044c62ea21e72b2a07e34c4636/plot_join_obs_seq.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq1 = obsq.obs_sequence(data_file1)\n\nprint('obs_seq1 has assimilation info:', obs_seq1.has_assimilation_info())\nprint('obs_seq1 has posterior:', obs_seq1.has_posterior())"
+        "obs_seq1 = obsq.ObsSequence(data_file1)\n\nprint('obs_seq1 has assimilation info:', obs_seq1.has_assimilation_info())\nprint('obs_seq1 has posterior:', obs_seq1.has_posterior())"
       ]
     },
     {
@@ -76,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "data_file2 = os.path.join(data_dir, \"obs_seq.final.ascii.small\")\nobs_seq2 = obsq.obs_sequence(data_file2)\n\nprint('obs_seq2 has assimilation info:', obs_seq2.has_assimilation_info())\nprint('obs_seq2 has posterior:', obs_seq2.has_posterior())"
+        "data_file2 = os.path.join(data_dir, \"obs_seq.final.ascii.small\")\nobs_seq2 = obsq.ObsSequence(data_file2)\n\nprint('obs_seq2 has assimilation info:', obs_seq2.has_assimilation_info())\nprint('obs_seq2 has posterior:', obs_seq2.has_posterior())"
       ]
     },
     {
@@ -112,7 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq_mega = obsq.obs_sequence.join([obs_seq1, obs_seq2])\n\nprint(f'length of obs_seq1: {len(obs_seq1.df)}'), print(f'length of obs_seq2: {len(obs_seq2.df)}')\nprint(f'length of obs_seq_mega: {len(obs_seq_mega.df)}')\n\nobs_seq_mega.df.head()"
+        "obs_seq_mega = obsq.ObsSequence.join([obs_seq1, obs_seq2])\n\nprint(f'length of obs_seq1: {len(obs_seq1.df)}'), print(f'length of obs_seq2: {len(obs_seq2.df)}')\nprint(f'length of obs_seq_mega: {len(obs_seq_mega.df)}')\n\nobs_seq_mega.df.head()"
       ]
     },
     {
@@ -148,7 +148,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq_no_members = obsq.obs_sequence.join([obs_seq1, obs_seq2], \n                                            ['prior_ensemble_mean', \n                                             'prior_ensemble_spread'])"
+        "obs_seq_no_members = obsq.ObsSequence.join([obs_seq1, obs_seq2], \n                                            ['prior_ensemble_mean', \n                                             'prior_ensemble_spread'])"
       ]
     },
     {
