--- a/_downloads/59ec61044c62ea21e72b2a07e34c4636/plot_join_obs_seq.ipynb
+++ b/_downloads/59ec61044c62ea21e72b2a07e34c4636/plot_join_obs_seq.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Chose the first obs_seq file to read.\nIn this example, we are using a small obs_seq file \"obs_seq.final.1000\"\nthat comes with the pyDARTdiags package \nin the data directory, so we ``import os`` to get the path to the file.\n\n"
+        "Chose the first obs_seq file to read.\nIn this example, we are using a small obs_seq file \"obs_seq.final.1000\".\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\ndata_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file1 = os.path.join(data_dir, \"obs_seq.final.1000\")"
+        "data_file1 = get_example_data(\"obs_seq.final.1000\")"
       ]
     },
     {
@@ -76,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "data_file2 = os.path.join(data_dir, \"obs_seq.final.ascii.small\")\nobs_seq2 = obsq.ObsSequence(data_file2)\n\nprint('obs_seq2 has assimilation info:', obs_seq2.has_assimilation_info())\nprint('obs_seq2 has posterior:', obs_seq2.has_posterior())"
+        "data_file2 = get_example_data(\"obs_seq.final.ascii.small\")\nobs_seq2 = obsq.ObsSequence(data_file2)\n\nprint('obs_seq2 has assimilation info:', obs_seq2.has_assimilation_info())\nprint('obs_seq2 has posterior:', obs_seq2.has_posterior())"
       ]
     },
     {
